--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,9 @@
 }
 
 #page-Quickmail .mform fieldset.hidden>div {
-   width: 800px;
-   text-align: left;
-   margin: auto;
+    text-align: left;
+    margin-left: auto;
+    margin-width: auto;
 }
 
 #page-Quickmail .mform #add_button, #remove_button, #add_all, #remove_all {
