--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,63 @@
+/*
+table#lae-user-grades th.cell { 
+	width: 30em; 
+} 
+*/
+.laegradestable {
+	font-size: 1em;
+	line-height: 1.2em;
+	vertical-align: middle;
+	margin: 0px;
+	margin: 0px;
+	padding: 0px;
+	text-align: center;
+}
+
+.grade-report-laegrader table#lae-user-grades {
+/*	padding:0;
+	margin:0;*/
+    font-style:bold;
+/*    border:1px solid #cccccc;
+    border-collapse:collapse;*/
+}
+
+.laegradestable .cell {
+    border:1px solid #cccccc;
+    border-collapse:separate;
+    min-width: 15em;
+    height: 56px;
+}
+
+.laegradestable th.user img {
+	width:35px;
+	height:35px;
+}
+
+.laegradestable th.user {
+	text-align:left;
+	line-height: 0px;
+}
+
+.laegradestable th.user a {
+	margin-left:5px;
+}
+
 .laegradestable th.useremail {
 	min-width:160px;
 	height:20px;
 	vertical-align:middle;
 }
 
-.grade-report-laegrader table#lae-user-grades {
-	padding:0;
-	margin:0;
-	font-size: 10px;
-    font-style:bold;
-    border:1px solid #cccccc;
-    border-collapse:collapse;
-}
-
-.laegradestable .cell {
-	vertical-align:middle;
-    border:1px solid #cccccc;
-    border-collapse:collapse;
-    text-align:center;
-}
-
 .laegradestable th#studentheader {
 	vertical-align:middle;
 /*	line-height: 70%; */
-	min-width:150px;
+	min-width:15em;
 }
 /*
 .laegradestable a.action-icon {
 	left-margin: 5px;
 }
 */
-.laegradestable {
-	font-size: 10px;
-	vertical-align: middle;
-}
-
-.laegradestable th.user img {
-	width:16px;
-	height:16px;
-}
-
-.laegradestable th.user {
-	text-align:left;
-}
-
-.laegradestable th.user a {
-	margin-left:5px;
-}
 
 .laegradestable img.iconsmall,
 .laegradestable img.smallicon {
@@ -84,6 +95,8 @@ td.controls.action-icon {
 .laegradestable th.controls {
 	text-align: right;
     font-style:bold;
+    height: 1.2em;
+    background-color: #F3EAD8;
 }
 
 .catblue {
@@ -95,20 +108,21 @@ td.controls.action-icon {
 }
 
 .laegradestable cell#userreport {
-	border:0px;
-	vertical-align:middle;
-    border-collapse:collapse;
+/*	border:0px;*/
+/*	vertical-align:middle;*/
+/*    border-collapse:collapse;*/
 }
 
-.laegradestable th#userreport, td.userreport {
+.laegradestable th#userreport, 
+.laegradestable td.userreport, 
+.laegradestable cell#userreport{
 	min-width:13px;
-	min-height:31px;
+	max-width: 1.7em;
+	min-height:1em; 
 }
 
 .laegradestable img.usergradesicon {
-	margin-left:0px;
-	vertical-align:middle;
-	margin-top:10px;
+	height: 1em;
 }
 
 table#lae-user-grades .quickfeedback {
@@ -124,7 +138,7 @@ table#lae-user-grades .quickfeedback {
 .heading_name_row th span {
 	white-space:nowrap;
 }
-
+/*
 .laegradestable tr.heading th.categoryitem, 
 .laegradestable tr.heading th.courseitem, 
 .laegradestable tr.heading th.item {
@@ -132,6 +146,7 @@ table#lae-user-grades .quickfeedback {
 	vertical-align:bottom;
 	min-width:130px;
 }
+*/
 /*
 .laegradestable th.highlightable {
 	vertical-align:bottom;
@@ -145,19 +160,19 @@ table#lae-user-grades.laegradestable tr.avg td.cell,
     background-color: #F3EAD8;
 }
 
-.laegradestable tr.avg,
-.laegradestable tr.controls,
-.laegradestable tr.range {
+.laegradestable td.avg,
+.laegradestable td.controls,
+.laegradestable td.range {
 	text-align:center;
     font-style:bold;
-    vertical-align:middle;
     background-color: #F3EAD8;
+    height: 1.2em;
 }
 
 .laegradestable td.userreport {
-	border:0px;
+/*	border:0px;
 	border-top:1px solid #cccccc;
-	border-bottom:1px solid #cccccc;
+	border-bottom:1px solid #cccccc;*/
 	vertical-align:middle;
 }
 
@@ -182,14 +197,25 @@ table#lae-user-grades tr.odd td.overridden {
 	background-color:#EFD9A4;
 }
 
+.laegradestable select {
+    height: 2.1em;
+    line-height: 2.1em;
+    font-size: .9em;
+    margin-bottom: 0px;
+/*    padding: 0px 0px;*/
+}
+
+table#lae-user-grades input[type="text"] {
+	font-size: 1em;
+	height: 1.2em;
+	margin-bottom: 0px;
+/*    padding: 0px;*/
+    vertical-align: bottom;
+    width: 6em;
+    line-height: 1.2em;
+    text-align: center;
+}
+
 /***
 *** added the following for the alignment issues
 ***/
-/*
-.laegradestable th.user{ height: 40px } 
-.grade-report-laegrader table#lae-user-grades tr.even td.cell { height: 40px !important; } 
-.grade-report-laegrader table#lae-user-grades tr.odd td.cell { height: 40px !important; } 
-.grade-report-grader table#fixed_column tr.odd th, .grade-report-grader table#lae-user-grades tr.odd th { height: 40px; } 
-.grade-report-grader table#fixed_column tr.even th, .grade-report-grader table#lae-user-grades tr.even th { height: 40px; } 
-.grade-report-grader table#lae-user-grades td.cell { height: 40px; }
-*/
