--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,7 @@ float:left;
 }
 
 .laegradestable td {
-text-align:right;
+/*text-align:right;*/
 border-style:solid;
 border-width:0 1px 1px 0;
 }
@@ -378,7 +378,7 @@ border-width:0 1px 1px 0;
 .laegradestable td.grade {
 	min-width: 16em;
 	max-width: 16em;
-/*	text-align: center;*/
+	text-align: center;
 }
 
 
